--- a/src/graph_editor/styles/grapheditor.scss
+++ b/src/graph_editor/styles/grapheditor.scss
@@ -28,7 +28,7 @@
 
   input {
     font-size: inherit;
-    border-width: 1px;
+    border-width: 2px;
   }
 
   select {
